[gd_scene load_steps=21 format=3 uid="uid://bjkt4h88p7gin"]

[ext_resource type="Texture2D" uid="uid://bjbrw6pomr0j0" path="res://MiniOldMan.png" id="1_ha7tp"]
[ext_resource type="Script" uid="uid://bygqtv0ekiwcg" path="res://scene/npc.gd" id="1_x7u2o"]
[ext_resource type="FontFile" uid="uid://badnudgme8miw" path="res://MinimalPixelFont.ttf" id="3_kb6gh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x7u2o"]
atlas = ExtResource("1_ha7tp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb6gh"]
atlas = ExtResource("1_ha7tp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2ow8"]
atlas = ExtResource("1_ha7tp")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aq7jx"]
atlas = ExtResource("1_ha7tp")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4mfm"]
atlas = ExtResource("1_ha7tp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbvat"]
atlas = ExtResource("1_ha7tp")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsbil"]
atlas = ExtResource("1_ha7tp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v5bx"]
atlas = ExtResource("1_ha7tp")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8op3"]
atlas = ExtResource("1_ha7tp")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pg4xg"]
atlas = ExtResource("1_ha7tp")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mao26"]
atlas = ExtResource("1_ha7tp")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_48ux1"]
atlas = ExtResource("1_ha7tp")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5w6q"]
atlas = ExtResource("1_ha7tp")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4glpm"]
atlas = ExtResource("1_ha7tp")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2d3sq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7u2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb6gh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2ow8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aq7jx")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4mfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbvat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsbil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v5bx")
}],
"loop": true,
"name": &"Talk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8op3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pg4xg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mao26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48ux1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5w6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4glpm")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ha7tp"]
size = Vector2(11, 7.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_x7u2o"]
radius = 26.0

[node name="npc" type="Node2D"]
script = ExtResource("1_x7u2o")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -3)
sprite_frames = SubResource("SpriteFrames_2d3sq")
animation = &"Idle"
autoplay = "Idle"

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-0.5, 8.75)
shape = SubResource("RectangleShape2D_ha7tp")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 7)
shape = SubResource("CircleShape2D_x7u2o")

[node name="npcText" type="Label" parent="."]
offset_left = -31.999998
offset_top = -10.0
offset_right = 283.0
offset_bottom = 59.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("3_kb6gh")
theme_override_font_sizes/font_size = 50
text = "click E to talk"
horizontal_alignment = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
